--- a/index.css
+++ b/index.css
@@ -33,8 +33,8 @@ a{color: #333; text-decoration: none;}
 .middle li h3{font-size: 14px;}
 .middle li p{margin-top: 5px; color:#999; }
 
-.footer{margin-top: 20px; background: #fff; border-top: 1px solid #d3d3d3;}
-.beian{margin: 5px auto; width: 1100px; text-align: center;}
+.footer{width: 100%; margin-top: 20px; background: #fff; border-top: 1px solid #d3d3d3;}
+.beian{margin: 5px auto; text-align: center;}
 
 @media screen and (max-width:1100px){
     .content{width: 100%;}
@@ -55,4 +55,5 @@ a{color: #333; text-decoration: none;}
     .middle .text{margin:0; display:inline-block; height: 25px;}
     .middle p{display: none;}
     .nav .navhidden{display: none;}
+    .beian{font-size: 10px;}
 }
