--- a/article.css
+++ b/article.css
@@ -10,7 +10,7 @@ a{color: #333; text-decoration: none;}
 .nav .img{float: left; margin-right: 20px;}
 .nav img{width: 50px; height: 50px;}
 .nav ul{height: 50px; line-height: 50px;}
-.nav li{ margin: 0 5px;}
+.nav li{margin: 0 5px;}
 .nav li, .nav a{display: inline-block; width: 80px; height: 100%; text-align: center;}
 .nav li a, .nav li a:hover{color: #fff; font-size: 14px;}
 .nav li a:hover{background-color: #484646;}
@@ -45,24 +45,30 @@ a{color: #333; text-decoration: none;}
 .footer{width: 100%; margin-top: 20px; background: #fff; border-top: 1px solid #d3d3d3;}
 .beian{margin: 5px auto; text-align: center;}
 
+#to_top{width:30px; height:30px; padding:20px; font:14px/20px arial; vertical-align:middle; background:#fff; position:absolute; cursor:pointer; color:#718d1f; border: 1px solid #d3d3d3;}
+
 @media screen and (max-width:1100px){
     .content{width: 100%;}
 }
 
+@media screen and (min-width: 768px) and (max-width: 960px){
+    .content{width: 100%;}
+    .right{display: none;}
+    .middle{margin: 0 0 0 180px;}
+}
+
 @media screen and (min-width: 450px) and (max-width: 768px){
     .content{width: 100%;}
+    .right{display: none;}
+    .left{display: none;}
+    .middle{margin: 0;}
 }
 
 @media screen and (max-width: 450px){
     .content{width: 100%;}
-    .middle a{margin: 10px 0 0 10px;}
-    .middle li{
-        display:block; width:100%; height:100%; padding: 0; 
-        display:flex; justify-content:center; align-items:center;
-    }
-    .middle .img{display: none; width: 0; height: 0; float: none;}
-    .middle .text{margin:0; display:inline-block; height: 25px;}
-    .middle p{display: none;}
+    .right{display: none;}
+    .left{display: none;}
+    .middle{margin: 0;}
     .nav .navhidden{display: none;}
     .beian{font-size: 10px;}
 }
