--- a/article.css
+++ b/article.css
@@ -10,8 +10,8 @@ a{color: #333; text-decoration: none;}
 .nav .img{float: left; margin-right: 20px;}
 .nav img{width: 50px; height: 50px;}
 .nav ul{height: 50px; line-height: 50px;}
-.nav li{margin: 0 5px;}
-.nav li, .nav a{display: inline-block; width: 80px; height: 100%; text-align: center;}
+.nav li{margin: 0 10px;}
+.nav li, .nav a{display: inline-block; height: 100%; text-align: center;}
 .nav li a, .nav li a:hover{color: #fff; font-size: 14px;}
 .nav li a:hover{background-color: #484646;}
 
@@ -19,7 +19,7 @@ a{color: #333; text-decoration: none;}
 
 .content{width: 1100px; margin: 0 auto; overflow: hidden;}
 
-.left{width: 180px; float: left; background: #fff; height: 1000px; padding-bottom: 9999px; margin-bottom: -9999px;
+.left{width: 180px; float: left; background: #fff; padding-bottom: 9999px; margin-bottom: -9999px;
     /*box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);*/}
 .left .menu_header {background: #4B4F55; border-bottom: 1px solid #353A40;}
 .left .menu_title {font-size: 12px; color: #fff; padding: 15px; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);}
@@ -51,7 +51,7 @@ a{color: #333; text-decoration: none;}
 .footer{width: 100%; margin-top: 20px; background: #fff; border-top: 1px solid #d3d3d3;}
 .beian{margin: 5px auto; text-align: center;}
 
-#to_top{width:30px; height:30px; padding:20px; font:14px/20px arial; vertical-align:middle; background:#fff; position:absolute; cursor:pointer; color:#718d1f; border: 1px solid #d3d3d3;}
+/*#to_top{width:30px; height:30px; padding:20px; font:14px/20px arial; vertical-align:middle; background:#fff; position:absolute; cursor:pointer; color:#718d1f; border: 1px solid #d3d3d3;}*/
 
 @media screen and (max-width:1100px){
     .content{width: 100%;}
@@ -60,21 +60,21 @@ a{color: #333; text-decoration: none;}
 @media screen and (min-width: 768px) and (max-width: 960px){
     .content{width: 100%;}
     .right{display: none;}
-    .middle{margin: 0 0 0 180px;}
+    .middle{margin: 0 0 0 180px; margin-bottom: -9999px;}
 }
 
 @media screen and (min-width: 450px) and (max-width: 768px){
     .content{width: 100%;}
     .right{display: none;}
     .left{display: none;}
-    .middle{margin: 0;}
+    .middle{margin: 0; margin-bottom: -9999px;}
 }
 
 @media screen and (max-width: 450px){
     .content{width: 100%;}
     .right{display: none;}
     .left{display: none;}
-    .middle{margin: 0;}
+    .middle{margin: 0; margin-bottom: -9999px;}
     .nav .navhidden{display: none;}
     .beian{font-size: 10px;}
 }
