--- a/index.css
+++ b/index.css
@@ -10,8 +10,8 @@ a{color: #333; text-decoration: none;}
 .nav .img{float: left; margin-right: 20px;}
 .nav img{width: 50px; height: 50px;}
 .nav ul{height: 50px; line-height: 50px;}
-.nav li{ margin: 0 5px;}
-.nav li, .nav a{display: inline-block; width: 80px; height: 100%; text-align: center;}
+.nav li{margin: 0 10px;}
+.nav li, .nav a{display: inline-block; height: 100%; text-align: center;}
 .nav li a, .nav li a:hover{text-decoration: none; color: #fff; font-size: 14px;}
 .nav li a:hover{background-color: #484646;}
 
@@ -27,11 +27,11 @@ a{color: #333; text-decoration: none;}
 .middle ul:after{content: "."; display: block; clear: both; height: 0; overflow: hidden; visibility: hidden;}
 .middle a{display: block; content: ""; width: 260px; height: 100px; overflow:hidden; background: #f5f5f5; border-radius: 5px; float: left; margin: 25px 0 0 10px;}
 .middle a:hover{background: #f0f0f0;}
-.middle li{padding: 20px; }
-.middle li .img{width: 40px; height: 35px; background: url(img/nav.png) no-repeat; background-position: 0 -400px; float: left; margin-right: 10px;}
-.middle .text{overflow: hidden; height: 60px;}
-.middle li h3{font-size: 14px;}
-.middle li p{margin-top: 5px; color:#999; }
+.middle li{margin: 15px;}
+.middle li h3{font-size: 14px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; margin-bottom: 10px;}
+.middle li img{width: 40px; height: 35px; float: left; margin-right: 10px;}
+.middle .text{overflow: hidden; height: 40px; }
+.middle li p{color:#999; line-height: 20px;}
 
 .footer{width: 100%; margin-top: 20px; background: #fff; border-top: 1px solid #d3d3d3;}
 .beian{margin: 5px auto; text-align: center;}
@@ -47,13 +47,10 @@ a{color: #333; text-decoration: none;}
 @media screen and (max-width: 450px){
     .content{width: 100%;}
     .middle a{margin: 10px 0 0 10px;}
-    .middle li{
-        display:block; width:100%; height:100%; padding: 0; 
-        display:flex; justify-content:center; align-items:center;
-    }
-    .middle .img{display: none; width: 0; height: 0; float: none;}
-    .middle .text{margin:0; display:inline-block; height: 25px;}
-    .middle p{display: none;}
+    .middle li{margin: 10px; text-align: center;}
+    .middle h3{line-height: 25px;}
+    .middle img{display: none; width: 0; height: 0; float: none;}
+    .middle .text{display: none;}
     .nav .navhidden{display: none;}
     .beian{font-size: 10px;}
 }
